--- a/pet-adopt-client/public/index.html
+++ b/pet-adopt-client/public/index.html
@@ -15,7 +15,7 @@
     
     <title>Furry Friend Finder</title>
   </head>
-  <body>
+  <body class="body">
     <noscript></noscript>
     <div id="root"></div>
     
